syntax = "proto3";

package tensorflow;

opt on cc_enable_arenas = true;
opt on java_outer_classna  = "TypesProtos";
opt on java_mult ple_f les = true;
opt on java_package = "org.tensorflow.fra work";
opt on go_package = "g hub.com/tensorflow/tensorflow/tensorflow/go/core/fra work/types_go_proto";

// (== suppress_warn ng docu ntat on-presence ==)
// L NT. fChange
enum DataType {
  // Not a legal value for DataType.  Used to  nd cate a DataType f eld
  // has not been set.
  DT_ NVAL D = 0;

  // Data types that all computat on dev ces are expected to be
  // capable to support.
  DT_FLOAT = 1;
  DT_DOUBLE = 2;
  DT_ NT32 = 3;
  DT_U NT8 = 4;
  DT_ NT16 = 5;
  DT_ NT8 = 6;
  DT_STR NG = 7;
  DT_COMPLEX64 = 8;  // S ngle-prec s on complex
  DT_ NT64 = 9;
  DT_BOOL = 10;
  DT_Q NT8 = 11;     // Quant zed  nt8
  DT_QU NT8 = 12;    // Quant zed u nt8
  DT_Q NT32 = 13;    // Quant zed  nt32
  DT_BFLOAT16 = 14;  // Float32 truncated to 16 b s.  Only for cast ops.
  DT_Q NT16 = 15;    // Quant zed  nt16
  DT_QU NT16 = 16;   // Quant zed u nt16
  DT_U NT16 = 17;
  DT_COMPLEX128 = 18;  // Double-prec s on complex
  DT_HALF = 19;
  DT_RESOURCE = 20;
  DT_VAR ANT = 21;  // Arb rary C++ data types
  DT_U NT32 = 22;
  DT_U NT64 = 23;

  // Do not use!  T se are only for para ters.  Every enum above
  // should have a correspond ng value below (ver f ed by types_test).
  DT_FLOAT_REF = 101;
  DT_DOUBLE_REF = 102;
  DT_ NT32_REF = 103;
  DT_U NT8_REF = 104;
  DT_ NT16_REF = 105;
  DT_ NT8_REF = 106;
  DT_STR NG_REF = 107;
  DT_COMPLEX64_REF = 108;
  DT_ NT64_REF = 109;
  DT_BOOL_REF = 110;
  DT_Q NT8_REF = 111;
  DT_QU NT8_REF = 112;
  DT_Q NT32_REF = 113;
  DT_BFLOAT16_REF = 114;
  DT_Q NT16_REF = 115;
  DT_QU NT16_REF = 116;
  DT_U NT16_REF = 117;
  DT_COMPLEX128_REF = 118;
  DT_HALF_REF = 119;
  DT_RESOURCE_REF = 120;
  DT_VAR ANT_REF = 121;
  DT_U NT32_REF = 122;
  DT_U NT64_REF = 123;
}
// L NT.T nChange(
//    https://www.tensorflow.org/code/tensorflow/c/tf_datatype.h,
//    https://www.tensorflow.org/code/tensorflow/go/tensor.go,
//    https://www.tensorflow.org/code/tensorflow/core/fra work/tensor.cc,
//    https://www.tensorflow.org/code/tensorflow/core/fra work/types.h,
//    https://www.tensorflow.org/code/tensorflow/core/fra work/types.cc,
//    https://www.tensorflow.org/code/tensorflow/python/fra work/dtypes.py,
//    https://www.tensorflow.org/code/tensorflow/python/fra work/funct on.py)
