use arrayvec::ArrayVec;
use  ertools:: ertools;
use log:: nfo;
use std::sync::Arc;
use tok o::sync::oneshot::Sender;
use tok o::t  :: nstant;

use crate::bootstrap::{Tensor nput, Tensor nputEnum};
use crate::cl _args::{ARGS, MODEL_SPECS};
use crate::{Callback, MAX_NUM_ NPUTS, Pred ctResult};
use crate:: tr cs::{
    BATCH_S ZE, BATCH_S ZE_BY_MODEL, BLOCK NG_REQUEST_NUM, MODEL_ NFERENCE_T ME_COLLECTOR,
    NUM_BATCH_PRED CT ON, NUM_BATCH_PRED CT ON_BY_MODEL, NUM_BATCHES_DROPPED,
    NUM_BATCHES_DROPPED_BY_MODEL, NUM_PRED CT ON_BY_MODEL, NUM_REQUESTS_DROPPED,
    NUM_REQUESTS_DROPPED_BY_MODEL,
};
use crate::pred ct_serv ce::Model;
use crate::tf_proto::tensorflow_serv ng::model_spec::Vers onCho ce;
use crate::tf_proto::tensorflow_serv ng::Pred ctRequest;
use crate::tf_proto::DataType;

#[der ve(Debug)]
pub struct BatchPred ctor<T: Model> {
    pub model: Arc<T>,
    pub  nput_tensors: Vec<Vec<Tensor nput>>,
    pub callbacks: Vec<Callback>,
    pub cur_batch_s ze: us ze,
    pub max_batch_s ze: us ze,
    pub batch_t  _out_m ll s: u64,
    pub queue_reset_ts:  nstant,
    pub queue_earl est_rq_ts:  nstant,
}

 mpl Pred ctRequest {
    #[ nl ne(always)]
    pub fn take_ nput_vals(
        &mut self,
         nputs: &ArrayVec<Str ng, MAX_NUM_ NPUTS>,
    ) -> Vec<Tensor nput> {
        let mut model_ nputs = Vec::<Tensor nput>::new();
        for  nput_na   n  nputs.as_sl ce() {
            let  nput_tensor = self
                . nputs
                .get_mut( nput_na )
                .unwrap_or_else(|| pan c!("can't f nd {:?}",  nput_na ));
            let d ms = match & nput_tensor.tensor_shape {
                None => None,
                So (data) => So (data.d m. er().map(|d| d.s ze).collect_vec()),
            };
            match  nput_tensor.dtype() {
                DataType::DtFloat => model_ nputs.push(Tensor nput::new(
                    Tensor nputEnum::Float(std:: m::take(&mut  nput_tensor.float_val)),
                     nput_na .to_str ng(),
                    d ms,
                )),
                DataType::DtDouble => model_ nputs.push(Tensor nput::new(
                    Tensor nputEnum::Double(std:: m::take(&mut  nput_tensor.double_val)),
                     nput_na .to_str ng(),
                    d ms,
                )),
                DataType::Dt nt32 => model_ nputs.push(Tensor nput::new(
                    Tensor nputEnum:: nt(std:: m::take(&mut  nput_tensor. nt_val)),
                     nput_na .to_str ng(),
                    d ms,
                )),
                DataType::DtStr ng => model_ nputs.push(Tensor nput::new(
                    Tensor nputEnum::Str ng(std:: m::take(&mut  nput_tensor.str ng_val)),
                     nput_na .to_str ng(),
                    d ms,
                )),
                DataType::Dt nt64 => model_ nputs.push(Tensor nput::new(
                    Tensor nputEnum:: nt64(std:: m::take(&mut  nput_tensor. nt64_val)),
                     nput_na .to_str ng(),
                    d ms,
                )),
                DataType::DtBool => model_ nputs.push(Tensor nput::new(
                    Tensor nputEnum::Boolean(std:: m::take(&mut  nput_tensor.bool_val)),
                     nput_na .to_str ng(),
                    d ms,
                )),
                _ => pan c!("unsupport  nput tensor type {:?}",  nput_tensor.dtype()),
            }
        }
        model_ nputs
    }
    #[ nl ne(always)]
    pub fn take_model_spec(&mut self) -> (Str ng, Opt on< 64>) {
        let model_spec = self.model_spec.as_mut().unwrap();
        let vers on = model_spec
            .vers on_cho ce
            .as_ref()
            .and_t n(|cho ce| match cho ce {
                Vers onCho ce::Vers on(vers on) => So (*vers on),
                _ => None,
            });
        (std:: m::take(&mut model_spec.na ), vers on)
    }
}

 mpl<T: Model> Drop for BatchPred ctor<T> {
    fn drop(&mut self) {
         nfo!(
            "drop old batch pred ctor for:{:}, queue:{}",
            self.model,
            self. nput_tensors.len()
        );
         f !self. nput_tensors. s_empty() {
             nfo!("now flush old pred ctor queue:{}", self. nput_tensors.len());
            self.batch_pred ct();
        }
    }
}

 mpl<T: Model> BatchPred ctor<T> {
    #[ nl ne(always)]
    pub fn push(&mut self, val: Vec<Tensor nput>, resp: Sender<Pred ctResult>, ts:  nstant) {
         f self. nput_tensors. s_empty() {
            //only w n queue  s empty t n   update ts to represent f rst request t  
            self.queue_reset_ts =  nstant::now();
            self.queue_earl est_rq_ts = ts;
        }
        self.cur_batch_s ze += 1;
        self. nput_tensors.push(val);
        self.callbacks.push(Callback(resp, self.cur_batch_s ze));
    }
    #[ nl ne(always)]
    pub fn batch_pred ct(&mut self) {
        BATCH_S ZE_BY_MODEL
            .w h_label_values(&[&MODEL_SPECS[self.model.model_ dx()]])
            .add(self.cur_batch_s ze as  64);
        BATCH_S ZE.add(self.cur_batch_s ze as  64);
        let mut batch_ nput_tensors = Vec::w h_capac y(self.max_batch_s ze);
        let mut batch_callbacks = Vec::w h_capac y(self.max_batch_s ze);
        let mut batch_s ze = 0;
        //now   swap so   can take two queues to t  block ng-send thread and reset current queues
        std:: m::swap(&mut self. nput_tensors, &mut batch_ nput_tensors);
        std:: m::swap(&mut self.callbacks, &mut batch_callbacks);
        std:: m::swap(&mut self.cur_batch_s ze, &mut batch_s ze);
        let model = self.model.clone();
        let batch_earl est_rq_ts = self.queue_earl est_rq_ts;
        // nfo!("batch pred ct for model:{}, s ze:{}", self.tf_model.export_d r, vals0.len());
        BLOCK NG_REQUEST_NUM. nc();
        tok o::task::spawn_block ng(move || {
            //proact vely drop stale batc s,   drop t  ent re batch
            //as long as one request  n that batch  s stale.   may drop more than   could t  way
            //but t  should work fa rly decently  ll
             f (batch_earl est_rq_ts.elapsed().as_m ll s() as u64) < ARGS.batch_drop_m ll s {
                let model_ nference_t  _start =  nstant::now();
                let (tensor_outs, batch_ends) =
                    model.do_pred ct(batch_ nput_tensors, batch_s ze as u64);
                MODEL_ NFERENCE_T ME_COLLECTOR
                    .w h_label_values(&[&MODEL_SPECS[model.model_ dx()]])
                    .observe(model_ nference_t  _start.elapsed().as_m ll s() as f64);
                let mut batch_starts = vec![0; tensor_outs.len()];
                for ( , Callback(resp, _))  n batch_callbacks. nto_ er().enu rate() {
                    let mut tensors_send_back = vec![];
                    for (j, tensor_out)  n tensor_outs. er().enu rate() {
                        tensors_send_back.push(tensor_out.sl ce(batch_starts[j], batch_ends[j][ ]));
                        batch_starts[j] = batch_ends[j][ ];
                    }
                     f resp
                        .send(Pred ctResult::Ok(tensors_send_back, model.vers on()))
                        . s_err()
                    {
                        //use dropped  tr cs  re as t   s expected under h gh load
                        NUM_REQUESTS_DROPPED. nc();
                        NUM_REQUESTS_DROPPED_BY_MODEL
                            .w h_label_values(&[&MODEL_SPECS[model.model_ dx()]])
                            . nc();
                    }
                }
            } else {
                for Callback(resp, _)  n batch_callbacks. nto_ er() {
                     f resp.send(Pred ctResult::DropDueToOverload). s_err() {
                        NUM_REQUESTS_DROPPED. nc();
                        NUM_REQUESTS_DROPPED_BY_MODEL
                            .w h_label_values(&[&MODEL_SPECS[model.model_ dx()]])
                            . nc();
                    }
                }
                NUM_BATCHES_DROPPED. nc();
                NUM_BATCHES_DROPPED_BY_MODEL
                    .w h_label_values(&[&MODEL_SPECS[model.model_ dx()]])
                    . nc();
            }
            BLOCK NG_REQUEST_NUM.dec();
        });
        NUM_BATCH_PRED CT ON. nc();
        NUM_BATCH_PRED CT ON_BY_MODEL
            .w h_label_values(&[&MODEL_SPECS[self.model.model_ dx()]])
            . nc();
        // Note:
        //  self.cur_batch_s ze  s swapped w h batch_s ze above
        //  Use t  local var able batch_s ze  re
        NUM_PRED CT ON_BY_MODEL
            .w h_label_values(&[&MODEL_SPECS[self.model.model_ dx()]])
            . nc_by(batch_s ze as u64);
    }
    #[ nl ne(always)]
    pub fn durat on_past(&self, m ll s: u64) -> bool {
        self.queue_reset_ts.elapsed().as_m ll s() as u64 >= m ll s
    }
}
